{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 99,
  "lineage": "bd0bd4b2-5ffc-4f03-ca32-19a4bdd23826",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "events-demo",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "events-demo",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "events-demo-cluster",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "events-demo-node",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "events-demo-node-ingress-cluster",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "events-demo-node-ingress-https",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "events-demo-node-ingress-self",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "events-demo",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "events-demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:021604647638:vpc/vpc-0b5388ee826e19285",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-006b9cdfa6057953a",
            "default_route_table_id": "rtb-0c7aa984da3e86a3e",
            "default_security_group_id": "sg-074439dbb0f03e8c9",
            "dhcp_options_id": "dopt-ddfdd8ba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b5388ee826e19285",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c7aa984da3e86a3e",
            "owner_id": "021604647638",
            "tags": {
              "Name": "events-demo-eks-node"
            }
          }
        }
      ]
    }
  ]
}